# chiffres_cnn

./: .env.example  .gitignore  .vercelignore  README.md  app.py  build.sh  model.py  pyproject.toml  requirements-build.txt  requirements.txt  setup.py  utils.py  vercel-requirements.txt  vercel.json  visualize.py
model/: mnist_model.keras  training_history.pkl
