[build-system]
requires = ["setuptools>=59.6.0", "wheel>=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name = "chiffres_cnn"
version = "1.0.0"
description = "Application de classification de chiffres manuscrits avec CNN"
requires-python = ">=3.11,<3.12"
dependencies = [
    "tensorflow-cpu==2.15.0",
    "numpy==1.24.3",
    "streamlit==1.22.0",
    "streamlit-drawable-canvas==0.9.2",
    "matplotlib==3.7.1",
    "opencv-python-headless==4.7.0.72",
    "scikit-learn==1.0.2",
    "pillow==9.5.0",
    "gunicorn==20.1.0"
] 